--- a/angular.json
+++ b/angular.json
@@ -38,7 +38,7 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true,
               "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
@@ -119,6 +119,12 @@
           }
         }
       }
-    }},
-  "defaultProject": "yt-mixer"
+    }
+  },
+  "defaultProject": "yt-mixer",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
