mixer-8 feat: Audio crossfading between two videos (#12)
* Added crossfade utilities

* Added infrastructure to get crossfade down to video players

* Added buttons to crossfade between the two videos

* Format fixes

Co-authored-by: William <william@kulin.com.au>

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/youtube": "0.0.39",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "youtube": "^0.1.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
