--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 chrome-profiler-events*.json
 speed-measure-plugin*.json
 
+# environment variables
+src/environments/keys.ts
+
 # IDEs and editors
 /.idea
 .project
@@ -34,6 +37,7 @@ speed-measure-plugin*.json
 
 # misc
 /.sass-cache
+/.firebase
 /connect.lock
 /coverage
 /libpeerconnection.log
