--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
     "@angular/youtube-player": "^10.1.3",
+    "@iktakahiro/youtube-url-parser": "^1.0.2",
     "@types/youtube": "0.0.39",
     "firebase": "^7.19.0",
     "rxjs": "~6.5.5",
